Ajusta tela experiencia

--- a/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
+++ b/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
@@ -45,6 +45,7 @@
                 {
                     <li class="nav-item"><a class="nav-link" asp-page="/Home/Cliente/Index">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" asp-page="/Vagas/IndexByUser"> Minhas Vagas</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-page="/Experiencias/Create">Avaliar freelancer</a></li> 
                 }
 
                 @if (Model != null && Model.Role == Frontend.Enums.EUserRole.Admin)
