--- a/SocialMediaFreelas.App/Pages/Experiencias/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Delete.cshtml
@@ -90,8 +90,10 @@
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/freelancer.jpg" alt="Profile Picture">
-        <h2>Excluir perfil</h2>
+        <div class="form-icon">
+            <span><i class="icon icon-minus"></i></span>
+        </div>
+        <h2>Excluir experiência</h2>
     </div>
     <div class="profile-form">
         <form method="post">
@@ -135,7 +137,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Delete" class="btn btn-danger" />
+                    <input type="submit" value="Excluir" class="btn btn-danger" />
                 </div>
             </div>
         </form>
