--- a/SocialMediaFreelas.App/Pages/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Index.cshtml
@@ -36,6 +36,10 @@
             max-width: 60ch;
         }
     }
+
+    #sobreSection {
+        margin-top: 120px !important;
+    }
 </style>
 
     <!-- Navigation-->
@@ -72,7 +76,7 @@
     </header>
     <!-- About Section-->
 
-     <div class="container px-5 my-5">
+     <div class="container px-5 my-6" id="sobreSection">
                 
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11">
