--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -99,6 +99,13 @@
     margin-bottom: 50px;
     line-height: 100px;
 }
+
+
+    @@media(max-width: 700px) {
+        #footer {
+            display: none;
+        }
+    }
     </style>
 </head>
 <body>
