--- a/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
@@ -79,7 +79,7 @@
         </div>
         @* <h2 class="text-center">Cadastrar Experiência</h2> *@
         <div class="form-group">
-            <input type="hidden" class="form-control item" id="freelancer" placeholder="Freelancer" required>
+            <input type="text" class="form-control item" id="freelancer" placeholder="Freelancer" required>
         </div>
         <div class="form-group">
             <input type="text" class="form-control item" id="project" placeholder="Projeto" required>
