--- a/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
@@ -98,8 +98,10 @@
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/freelancer.jpg" alt="Profile Picture">
-        <h2>Editar perfil</h2>
+        <div class="form-icon">
+            <span><i class="icon icon-note"></i></span>
+        </div>
+        <h2>Editar experiência</h2>
     </div>
 
     <div class="profile-form">
