--- a/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
@@ -66,6 +66,21 @@
     background: #4478e3;
 }
 
+#textArea {
+    width: 100%;
+    height: 60px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    resize: none;
+}
+
+#footer {
+    display: none !important;
+}
+
 </style>
 
   <div class="registration-form">
@@ -100,7 +115,7 @@
                 <input type="text" class="form-control item" id="remuneration" placeholder="Remuneração" required>
             </div>
             <div class="form-group">
-                <textarea class="form-control item" id="description" placeholder="Descrição da Vaga" rows="10" required></textarea>
+                <textarea type="text" class="form-control item" id="textArea" placeholder="Descrição da Vaga" rows="10"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-block create-account">Criar Vaga</button>
