Ajusta title telas

--- a/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Experiencias.EditModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <style>
