--- a/SocialMediaFreelas.App/Pages/Experiencias/IndexByUser.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/IndexByUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Experiencias.IndexByUserModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral by User";
 }
 
 <h1>Experiencias</h1>
