--- a/SocialMediaFreelas.App/Pages/Freelancers/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Freelancers.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral";
 }
 
 <h1>Freelancers</h1>
