--- a/SocialMediaFreelas.App/Pages/Vagas/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Vagas.DeleteModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Excluir";
 }
 
 <h1>Delete</h1>
