--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Vagas.DetailsModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Detalhes";
 }
 
 <h1>Details</h1>
