--- a/SocialMediaFreelas.App/Pages/Vagas/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Vagas.EditModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Edit</h1>
