--- a/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Vagas.IndexByUserModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral by User";
 }
 
 <h1>Vagas</h1>
