--- a/SocialMediaFreelas.App/Pages/Clientes/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Clientes.CreateModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar";
 }
 
 <style>
