--- a/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
@@ -1,73 +1,8 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Clientes.DetailsModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Detalhes";
 }
-
-<style>
-   /* .card-custom {
-        margin-top: 20px;
-        max-width: 80%;
-        font-size: 1.5rem; 
-        padding: 20px;
-        border: none; 
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    }
-
-    .card-title-custom {
-        font-size: 2.5rem;
-        margin-bottom: 20px;
-    }
-
-    .info-item {
-        margin-bottom: 10px; 
-    }
-
-    .profile-img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-    }
-
-    .mt-5 {
-        margin-top: 20 !important;
-    }*/
-
-</style>
-@*
-<div class="d-flex justify-content-center">
-    <div class="card card-custom mt-5">
-        <div class="row g-0">
-            <div class="col-md-6">
-                <img src="/img/png-transparent-user-user-people-linear-icon-user-infographic-people-monochrome.png" class="profile-img" alt="Foto do Cliente">
-            </div>
-            <div class="col-md-6">
-                <div class="card-body">
-                    <h5 class="card-title card-title-custom">Perfil do Cliente</h5>
-                    <div class="row">
-                        <div class="col-md-12 info-item">
-                            <strong>Número do Documento:</strong> 123456789
-                        </div>
-                        <div class="col-md-12 info-item">
-                            <strong>Nome:</strong> João Silva
-                        </div>
-                        <div class="col-md-12 info-item">
-                            <strong>Data de Nascimento:</strong> 01/01/1980
-                        </div>
-                        <div class="col-md-12 info-item">
-                            <strong>Email:</strong> joao.silva@example.com
-                        </div>
-                        <div class="col-md-12 info-item">
-                            <strong>Telefone:</strong> (11) 98765-4321
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-*@
-
 
 <style>
     .icon-container {
