--- a/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Clientes.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral";
 }
 
 <h1>Clientes</h1>
