--- a/SocialMediaFreelas.App/Pages/Experiencias/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Experiencias.DetailsModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Detalhes";
 }
 
 <style>
