--- a/SocialMediaFreelas.App/Pages/Experiencias/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Experiencias.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral";
 }
 
 <h1>Experiencias</h1>
