--- a/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Freelancers.DeleteModel
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir";
 }
 
 <style>
