--- a/SocialMediaFreelas.App/Pages/Freelancers/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int?}"
 @model SocialMediaFreelas.Pages.Freelancers.DetailsModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Detalhes";
 }
 
 <style>
