--- a/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Vagas.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Geral";
 }
 
 <h1>Vagas</h1>
