--- a/SocialMediaFreelas.App/Pages/Experiencias/IndexByUser.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/IndexByUser.cshtml
@@ -4,15 +4,57 @@
     ViewData["Title"] = "Geral by User";
 }
 
+<style>
+    .icon {
+        color: cornflowerblue;
+    }
+</style>
+
+
+
+<div class="container mt-5">
+
+    <!-- Barra de Pesquisa -->
+    <div class="row mb-4">
+        <div class="col-12">
+            <input class="form-control form-control-lg" type="text" placeholder="Pesquisar experiências...">
+        </div>
+    </div>
+    <!-- Cards de Experiências -->
+
+  <div class="row">
+       @if (Model.Response != null)
+        {
+            foreach (var experiencia in Model.Response)
+            {
+                <!-- Card Experiência 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">@experiencia.Projeto</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">@experiencia.Empresa</h6>
+                            <p class="card-text"><small class="text-muted">@experiencia.Tecnologia</small></p>
+
+                            <p class="card-text">R$@experiencia.Valor</p>
+
+                            <p class="card-text">Avaliação do cliente:
+                            @for (int i = 0; i < experiencia.Avaliacao; i++)
+                            {
+                                <span><i class="icon icon-diamond"></i></span>
+                            }
+                                    </p>
+                        </div>
+                    </div>
+                </div>
+            }
+            }
+            <!-- Repita o bloco acima para cada experiência, alterando o título, empresa, descrição e detalhes conforme necessário -->
+  </div>
+</div>
+
+@*
 <h1>Experiencias</h1>
 
-@*@if (TempData["MensagemSucesso"] != null)
-{
-    <div class="alert alert-success button-success" role="alert" id="success-message">
-        @TempData["MensagemSucesso"]
-        <i class="fa fa-check" aria-hidden="true"></i>
-    </div>
-}*@
 
 <table class="table table-light">
     <thead>
@@ -69,3 +111,4 @@
         }
     </tbody>
 </table>
+*@
