--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="~/SocialMediaFreelas.App.styles.css" asp-append-version="true" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
+
+        * {
+            font-family: "Roboto", sans-serif;
+        }
+
         body {
             background: linear-gradient(180deg, #4e89ff, #2f5299) !important;
             @* color: #fff !important; *@
